# rds-course

./: .all-contributorsrc  .buildinfo  .gitignore  .python-version  README.html  README.md  checklist.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  welcome.html
.github/workflows/: book.yml
.ipynb_checkpoints/: pyproject-checkpoint.toml
_sources/: README.md  index.md
coursebook/: README.md  _config.yml  _toc.yml  index.md  requirements.txt
coursebook/figures/: 4.1_1  4.1_2
data-analysis/: Data_description.ipynb  Handling-data-deployment.ipynb  Handling-data.ipynb  Handling_data.ipynb  Model_evaluation.ipynb  Modelling_data.ipynb  README_CODE.md
data-analysis/scripts/: README_CODE.md  boostrap.py  categorical_variable_mapping.py  eqls_box_plot.py  eqls_condition_plot.py  eqls_count_plot.py  eqls_missing_data_plot.py  eqls_ridgeline_plot.py
docs/: .buildinfo  genindex.html  objects.inv  searchindex.js
docs/_sources/: welcome.md
module_2/: README.md  urban_population.csv  urban_population_header.csv
modules/m1/: 1.1-WhatIsDataScience.html  1.2-DataScienceProjectLifecycle.html  1.3-EDIForDataScience.html  1.4-CollaborationAndReproducibility.html  Lesson_1.1_What_is_data_science.html  Lesson_1.2_Data_Science_project_lifecycle.html  Lesson_1.3_EDI_for_data_science.html  Lesson_1.4_Collaboration_and_reproducibility.html  hands-on.html  overview.html  taught.html
modules/m2/: 2-01-01-WhereToFindData.html  2-01-02-LegalityAndEthics.html  2-01-03-PandasIntro.html  2-01-04-DataSourcesAndFormats.html  2-01-05-ControllingAccess.html  2-01-GettingLoading.html  2-01-WhereToFindData.html  2-02-01-DataConsistency.html  2-02-02-ModifyingColumnsAndIndices.html  2-02-03-FeatureEngineering.html  2-02-04-01-TimeAndDateData.html  2-02-04-02-TextData.html  2-02-04-03-CategoricalData.html  2-02-04-04-ImageData.html  2-02-04-DataManipulation.html  2-02-05-PrivacyAndAnonymisation.html  2-02-06-LinkingDatasets.html  2-02-07-MissingData.html  2-02-ExploringWrangling.html  2-02-LegalityAndEthics.html  2-03-PandasIntro.html  2-04-DataSourcesAndFormats.html  2-05-ControllingAccess.html  2-06-DataConsistency.html  2-07-ModifyingColumnsAndIndices.html  2-08-TimeAndDateData.html  2-09-FeatureEngineering.html  2-10-TextData.html  (+30 more)
paper/: paper.md
(+301 files in other folders)
