[tool.poetry]
name = "rds-course"
packages = [
    { include = "coursebook" },
]
version = "0.1.0"
description = ""
authors = ["ChristinaLast <christina.last@outlook.com>", "James Bishop <jbishop@turing.ac.uk>", "Jack Roberts <jroberts@turing.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = "^1.21.1"
pandas = "^1.3.1"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
jupyterlab = "^3.1.4"
missingno = "^0.5.0"
opencv-python = "^4.5.3"
requests = "^2.26.0"
statsmodels = "^0.13.0"
plotly = "^5.3.1"
graphviz = "^0.18"
scipy = "^1.7.2"

[tool.poetry.dev-dependencies]
jupyter-book = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
