[tool.poetry]
name = "rds-course"
packages = [
    { include = "coursebook" },
]
version = "0.1.0"
description = ""
authors = ["ChristinaLast <christina.last@outlook.com>", "James Bishop <jbishop@turing.ac.uk>", "Jack Roberts <jroberts@turing.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = "^1.21.6"
pandas = "^1.3.5"
scikit-learn = "^1.0.2"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
jupyterlab = "^3.4.2"
missingno = "^0.5.1"
opencv-python = "^4.5.5"
requests = "^2.27.1"
statsmodels = "^0.13.2"
plotly = "^5.8.0"
graphviz = "^0.20"
scipy = "^1.7.3"
jupyter-book = "^0.12.3"
openpyxl = "^3.0.9"
jsonschema = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
