[tool.poetry]
name = "rds-course"
packages = [
    { include = "coursebook" },
]
version = "0.1.0"
description = ""
authors = ["ChristinaLast <christina.last@outlook.com>", "James Bishop <jbishop@turing.ac.uk>", "Jack Roberts <jroberts@turing.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
jupyterlab = "^3.6.1"
missingno = "^0.5.1"
opencv-python = "^4.7.0.68"
requests = "^2.28.2"
statsmodels = "^0.13.5"
plotly = "^5.13.0"
graphviz = "^0.20.1"
jupyter-book = "^0.13.2"
openpyxl = "^3.1.0"
scipy = ">=1.3,<1.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
